syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 198
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message SetPlayerBornDataReq {
	uint32 avatar_id = 3;
	string nick_name = 12;
}
