syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 145
// EnetChannelId: 0
// EnetIsReliable: true
message SetPlayerBornDataRsp {
	int32 retcode = 4;
}
